--- a/src/app/components/description-viewer/description-viewer.component.html
+++ b/src/app/components/description-viewer/description-viewer.component.html
@@ -5,5 +5,7 @@
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dialog-head"></div>
 
-  <div class="set-12 dialog-body"></div>
+  <div class="set-12 dialog-body">
+    {{document.description}}
+  </div>
 </div>
