--- a/src/app/hub/components/map-box/map-box.component.scss
+++ b/src/app/hub/components/map-box/map-box.component.scss
@@ -1,21 +1,17 @@
 :host {
   .map-container {
     width: 100%;
-    // margin-top: 2em;
     padding: 0;
 
     mat-card {
       width: 100%;
       display: flex;
       flex-direction: column;
-      // justify-content: space-between;
-      // align-items: stretch;
       padding: 0;
       height: 100%;
     }
 
     .map {
-      //   max-width: 730px;
       width: 100%;
       height: 450px;
       display: block;
@@ -47,6 +43,9 @@
 
         .row {
           display: flex;
+          flex: 1;
+          align-items: center;
+          text-align: center;
 
           >* {
             margin: 0;
@@ -132,13 +131,10 @@
 
   .chart-container {
     width: 100%;
-    // background-color: orange;
     display: flex;
     flex-direction: column;
-    // justify-content: space-around;
 
     p {
-      // margin: 0;
       color: #20C588;
       margin-top: 20px;
       text-align: left;
