--- a/src/app/hub/components/admin-template/admin-template.component.scss
+++ b/src/app/hub/components/admin-template/admin-template.component.scss
@@ -20,12 +20,31 @@
     }
   }
 
-  .select{
+  .empty-layout {
+    text-align: center;
+    margin-top: 20px;
+
+    mat-icon {
+      font-size: 30pt;
+      // color: #306EFF;
+    }
+
+    .date {
+      margin-bottom: 20px;
+    }
+
+    .ctrls {
+      margin-top: 30px;
+    }
+  }
+
+  .select {
     border: 2.5px solid #306EFF;
-    box-shadow : 0px 8px 25px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 8px 25px 2px rgba(0, 0, 0, 0.12);
     border-radius: 5px;
     transition: all 200ms;
   }
+
   .carousel-hldr {
     margin-bottom: 20px;
 
@@ -238,7 +257,6 @@
     }
 
     .contentComment {
-
       display: flex;
       flex-flow: column wrap;
       margin-top: 20px;
@@ -259,7 +277,8 @@
           width: 32px;
           height: 32px;
         }
-        .imgUserNull{
+
+        .imgUserNull {
           margin: 0px;
           margin-right: 12px;
           display: block;
@@ -271,6 +290,7 @@
           font-weight: normal;
           line-height: 18pt;
         }
+
         .userName {
           margin: 0px;
           width: 200px;
@@ -280,12 +300,13 @@
         }
       }
 
-      .textRelations{
+      .textRelations {
         width: 100%;
         font-size: 13px;
         text-align: left;
         margin-top: 18px;
       }
+
       p {
         font-family: 'Noto Sans';
         margin-left: 43px;
@@ -301,7 +322,8 @@
       }
     }
   }
-  .scroll{
+
+  .scroll {
     overflow-y: auto;
     height: 340px;
   }
