--- a/src/app/hub/components/editor-template/editor-template.component.scss
+++ b/src/app/hub/components/editor-template/editor-template.component.scss
@@ -20,6 +20,13 @@
     }
   }
 
+  .select {
+    border: 2.5px solid #306EFF;
+    box-shadow: 0px 8px 25px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 5px;
+    transition: all 200ms;
+  }
+
   .carousel-hldr {
     margin-bottom: 20px;
 
