--- a/src/app/hub/components/map-box/map-box.component.html
+++ b/src/app/hub/components/map-box/map-box.component.html
@@ -11,7 +11,6 @@
       </svg>
     </div>
 
-    <!-- DATA -->
     <div class="aside-data">
       <mat-form-field appearance="outline" *ngIf="isDataAvailable" class="select-full">
         <mat-label>Cobertura</mat-label>
@@ -27,32 +26,26 @@
           <div class="dot-map green">
             <mat-icon>insights</mat-icon>
           </div>
-
-          <p>
-            Soluciones <br />
-            <b>2500</b>
-          </p>
+          <div>
+            <p>Soluciones</p>
+            <p>0</p>
+          </div>
         </div>
 
         <div class="row">
           <div class="dot-map red">
             <mat-icon>warning</mat-icon>
           </div>
-
-          <p>
-            Problemas <br />
-            <b>2500</b>
-          </p>
+          <div>
+            <p>Problemas</p>
+            <p>0</p>
+          </div>
         </div>
       </div>
 
       <div class="chart-container">
         <canvas class="donut-chart" baseChart [data]="data" [type]="'doughnut'" [options]="chartOptions"></canvas>
-
-        <p>
-          Categorias <br />
-          <b>2500</b>
-        </p>
+        <p>Categorias</p>
       </div>
     </div>
   </mat-card>
