--- a/src/app/hub/user-notifications/user-notifications.component.scss
+++ b/src/app/hub/user-notifications/user-notifications.component.scss
@@ -32,6 +32,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      border: 1px solid #1e7e7f;
 
       img {
         width: 100%;
@@ -40,5 +41,9 @@
         float: left;
       }
     }
+  }
+
+  .unread {
+    background: rgba($color: #1e7e7f, $alpha: 0.3);
   }
 }
