--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -12,7 +12,7 @@
       <ng-template #noTitle>
         <div>categoria</div>
       </ng-template>
-      <li>{{ selectedCategory.category.name }}</li>
+      <li>{{ selectedCategory.name }}</li>
     </breadcrumbs-component>
   </div>
 
@@ -27,8 +27,8 @@
     <div class="set-3 col-lft">
       <mat-card class="set-12 doc-description">
         <div class="set-12 imghldr">
-          <mat-icon class="pano" *ngIf="selectedCategory.images.length == 0">panorama</mat-icon>
-          <img [src]="selectedCategory.images[0]" alt="" *ngIf="selectedCategory.images.length != 0">
+          <!-- <mat-icon class="pano" *ngIf="selectedCategory.images.length == 0">panorama</mat-icon>
+          <img [src]="selectedCategory.images[0]" alt="" *ngIf="selectedCategory.images.length != 0"> -->
           <div class="overlay" (click)="popImageViewer()">
             <mat-icon color="accent">photo_camera</mat-icon>
             <div class="cover"></div>
@@ -37,7 +37,7 @@
 
         <div class="set-12 infohldr">
           <div class="set-12 card-title">
-            <div class="set-10">{{ selectedCategory.category.name }}</div>
+            <div class="set-10">{{ selectedCategory.name }}</div>
             <div class="set-2 txt-right">
               <button type="button" [matMenuTriggerFor]="menu"
                 [disabled]="!actionControlActivityList.includes(user.activityName)">
@@ -101,8 +101,8 @@
         <div class="set-4">
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
-            <mat-select [value]="document.coverage[0]._id">
-              <mat-option *ngFor="let option of document.coverage" [value]="option._id">
+            <mat-select>
+              <mat-option *ngFor="let option of document.coverage" [value]="option._id" [disabled]="!option.enabled">
                 <small>{{ option.name | titlecase }}</small>
               </mat-option>
             </mat-select>
@@ -157,52 +157,6 @@
         </div>
       </div>
 
-      <!-- <div class="set-12">
-        <mat-card class="set-12 info-lists">
-          <div class="set-4">
-            <div class="inner-card">
-              <div class="set-4">
-                <span class="roundico-green">
-                  <mat-icon>groups</mat-icon>
-                </span>
-              </div>
-
-              <div class="set-8">
-                <p><small>Usuarios</small></p>
-                <strong>{{collaborators.length}}</strong>
-              </div>
-            </div>
-
-            <div class="inner-card">
-              <div class="set-4">
-                <span class="roundico-orange">
-                  <mat-icon>front_hand</mat-icon>
-                </span>
-              </div>
-              
-              <div class="set-8">
-                <p><small>Interacciones</small></p>
-                <strong>0</strong>
-              </div>
-            </div>
-          </div>
-
-          <div class="set-4">
-            <p class="list-title">
-              <small>Soluciones</small>
-              <mat-icon class="icon-insights">insights</mat-icon>
-            </p>
-          </div>
-
-          <div class="set-4">
-            <p class="list-title">
-              <small>Problemas</small>
-              <mat-icon class="icon-warnings">warning</mat-icon>
-            </p>
-          </div>
-        </mat-card>
-      </div> -->
-
       <div class="set-12 category-list">
         <mat-card class="set-12">
           <div class="set-12 table-head">
@@ -225,10 +179,18 @@
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Título</th>
               <td mat-cell *matCellDef="let element">
-                <button type="button" class="catbtn"
-                  (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + element._id)">
+                <button type="button" class="catbtn" [disabled]="!element.access"
+                  (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory.id + '/subcategoria/' + element.id)"
+                  *ngIf="user.activityName != 'administrator'">
                   <mat-icon>question_answer</mat-icon>
-                  <small>{{element.category.name}}</small>
+                  <small>{{element.name}}</small>
+                </button>
+
+                <button type="button" class="catbtn" [disabled]="!element.access"
+                  (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + element._id)"
+                  *ngIf="user.activityName == 'administrator'">
+                  <mat-icon>question_answer</mat-icon>
+                  <small>{{element.name}}</small>
                 </button>
               </td>
             </ng-container>
