--- a/src/app/components/add-comments/add-comments.component.scss
+++ b/src/app/components/add-comments/add-comments.component.scss
@@ -33,6 +33,20 @@
     }
   }
 
+  .bwico {
+    display: flex;
+    align-items: center;
+    margin: 0;
+
+    * {
+      margin: 0;
+    }
+
+    small {
+      margin-left: 10px;
+    }
+  }
+
   .loading {
     mat-spinner {
       position: absolute;
