--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -18,7 +18,7 @@
 
   <div class="set-12 author-hldr">
     <span class="created-by">
-      Autor: <span class="author">{{selectedCategory.createdBy.firstname}}
+      Autor: <span class="author">{{subcategory.createdBy.firstname}}
         {{subcategory.createdBy.lastname}}</span>
     </span>
   </div>
