--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -23,8 +23,8 @@
   <div class="set-12 author-hldr">
     <span class="created-by">
       Autor:
-      <span class="author">{{ category.createdBy.firstname }}
-        {{ category.createdBy.lastname }}</span>
+      <span class="author">{{ topic.createdBy.firstname }}
+        {{ topic.createdBy.lastname }}</span>
     </span>
   </div>
 
