--- a/src/app/components/add-comments/add-comments.component.scss
+++ b/src/app/components/add-comments/add-comments.component.scss
@@ -14,6 +14,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      margin-top: 20px;
 
       * {
         margin: 0;
@@ -34,17 +35,14 @@
   }
 
   .bwico {
-    display: flex;
-    align-items: center;
-    margin: 0;
-
-    * {
-      margin: 0;
+    mat-icon {
+      font-size: 11pt;
     }
+  }
 
-    small {
-      margin-left: 10px;
-    }
+  .locations {
+    margin-top: 10px;
+    font-style: italic;
   }
 
   .loading {
