--- a/src/app/documents/single-solution/single-solution.component.html
+++ b/src/app/documents/single-solution/single-solution.component.html
@@ -26,8 +26,8 @@
 
   <div class="set-12 author-hldr">
     <span class="created-by">
-      Autor: <span class="author">{{category.createdBy.firstname}}
-        {{category.createdBy.lastname}}</span>
+      Autor: <span class="author">{{solution.createdBy.firstname}}
+        {{solution.createdBy.lastname}}</span>
     </span>
   </div>
 
@@ -70,7 +70,7 @@
         <div class="set-4">
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
-            <mat-select>
+            <mat-select (selectionChange)="onSelectCoverage($event)">
               <mat-option *ngFor="let option of document.coverage" [value]="option._id" [disabled]="!option.enabled">
                 <small>{{ option.name | titlecase }}</small>
               </mat-option>
@@ -78,11 +78,12 @@
           </mat-form-field>
         </div>
         <div class="set-8 txt-right">
-          <button type="button" mat-mini-fab color="accent" class="mini test" matTooltip="Agregar Comentario">
-            <mat-icon>forum</mat-icon>
+          <button type="button" mat-mini-fab color="primary" class="mini test" matTooltip="Agregar Comentario"
+            (click)="popAddCommentsDialog()">
+            <mat-icon>add_comment</mat-icon>
           </button>
-          <button type="button" mat-mini-fab color="primary" class="mini test" matTooltip="Agregar Testimonio">
-            <mat-icon>forum</mat-icon>
+          <button type="button" mat-mini-fab color="warn" class="mini test" matTooltip="Agregar Testimonio">
+            <mat-icon>insert_comment</mat-icon>
           </button>
           <!-- <button type="button" mat-mini-fab color="warn" class="mini insights" matTooltip="Agregar Solución">
             <mat-icon>insights</mat-icon>
